Fix team photos wraping in team section

--- a/css/main.css
+++ b/css/main.css
@@ -355,12 +355,10 @@ body {
   color: #fff; }
   .team__leaders {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 16rem);
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(4, minmax(14rem, 18rem));
     grid-gap: 2rem;
     justify-content: center; }
-    @media only screen and (max-width: 75rem) {
-      .team__leaders {
-        grid-template-columns: repeat(auto-fit, 14rem); } }
     @media only screen and (max-width: 62.5rem) {
       .team__leaders {
         grid-template-columns: repeat(auto-fit, minmax(16rem, 20rem)); } }
